--- a/app/src/main/res/drawable/background_touchable.xml
+++ b/app/src/main/res/drawable/background_touchable.xml
@@ -3,8 +3,8 @@
     <item
         android:state_focused="true"
         android:state_pressed="false"
-        android:drawable="@color/color_accent"
-        android:color="@color/color_accent" />
+        android:drawable="@color/color_primary_dark"
+        android:color="@color/color_primary_dark" />
     <item
         android:state_focused="true"
         android:state_pressed="true"
@@ -16,6 +16,6 @@
         android:drawable="@color/color_primary"
         android:color="@color/color_primary" />
     <item
-        android:drawable="@color/color_accent"
-        android:color="@color/color_accent" />
+        android:drawable="@color/color_primary_dark"
+        android:color="@color/color_primary_dark" />
 </selector>
