--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">@color/indigo_200</color>
-    <color name="color_primary_dark">@color/indigo_400</color>
-    <color name="color_accent">@color/indigo_A100</color>
+    <color name="color_primary">@color/teal_400</color>
+    <color name="color_primary_dark">@color/teal_800</color>
+    <color name="color_accent">@color/teal_600</color>
 
     <color name="color_image_details">@color/color_black_alpha_7F</color>
     <color name="color_progress_background">@color/color_grey_9494B2</color>
