--- a/app/src/main/res/layout/navigation_view.xml
+++ b/app/src/main/res/layout/navigation_view.xml
@@ -9,7 +9,7 @@
     </data>
 
     <RelativeLayout
-        android:layout_width="260dp"
+        android:layout_width="@dimen/navigation_view_width"
         android:layout_height="match_parent"
         android:layout_gravity="start">
 
